went wrong with manifest shit

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,20 @@
 {
-  "name": "UEFA 2020",
-  "short_name": "UEFA 2020",
+  "name": "UEFA",
+  "short_name": "UEFA",
   "description": "Submission kedua",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#212121",
   "theme_color": "#212121",
-  "gcm_sender_id" : "992735611060"
-  
+  "gcm_sender_id" : "992735611060",
+  "icon" : [
+    {
+      "src": "icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+      
+    }
+    
+    
+  ]
 }
