--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,29 @@
   "background_color": "#212121",
   "theme_color": "#212121",
   "gcm_sender_id" : "992735611060",
-  "icon" : [
+  "icons" : [
     {
-      "src": "icon.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
       
+    },
+    {
+      "src": "logo256.png",
+      "type": "image/png",
+      "sizes": "256x256"
+      
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+      
+    },
+    {
+      "src": "logo144.png",
+      "type": "image/png",
+      "sizes": "144x144"
     }
     
     
